Add 06, 07, 09